--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header id="header">
-        <img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png">
+        <img id="header-img" src="img/logo.png">
         
         <nav id="nav-bar">
           <li><a class="nav-link" href="#features">Features</a></li>
